--- a/src/Nowruz/modules/Jobs/components/jobDetailAbout/jobDetailAbout.module.scss
+++ b/src/Nowruz/modules/Jobs/components/jobDetailAbout/jobDetailAbout.module.scss
@@ -1,7 +1,7 @@
 @import 'src/components/_primitives.scss';
 
 .container {
-  max-width: fit-content;
+  max-width: 360px;
   width: fit-content;
   display: flex;
   flex-direction: column;
@@ -13,6 +13,7 @@
     gap: 20px;
     border: none;
     padding: 0px 16px 0px 16px;
+    max-width: 100%;
   }
 }
 
