--- a/src/Nowruz/modules/general/components/Chip/chip.module.scss
+++ b/src/Nowruz/modules/general/components/Chip/chip.module.scss
@@ -1,42 +1,39 @@
 @import 'src/components/_primitives.scss';
 
 .chip-sm {
-  height: 22px;
-  padding: 2px 8px;
+  height: 1.375rem;
+  padding: 0.125rem 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 4px;
-  font-size: 12px;
+  gap: 0.25rem; // To replace with constant spacing
+  font-size: 0.75rem;  // To replace with constant text size
   font-weight: 500;
-  line-height: 18px;
-  letter-spacing: 0em;
+  line-height: 1.125rem;
 }
 
 .chip-md {
-  height: 24px;
-  padding: 2px 10px;
+  height: 1.5rem;
+  padding: 0.125rem 0.625rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 6px;
-  font-size: 14px;
+  gap: 0.375rem; // To replace with constant spacing
+  font-size: 0.875rem;  // To replace with constant text size
   font-weight: 500;
-  line-height: 20px;
-  letter-spacing: 0em;
+  line-height: 1.25rem;
 }
 
 .chip-lg {
-  height: 28px;
-  padding: 4px 12px;
+  height: 1.75rem;
+  padding: 0.25rem 0.75rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 6px;
-  font-size: 14px;
+  gap: 0.375rem; // To replace with constant spacing
+  font-size: 0.875rem; // To replace with constant text size
   font-weight: 500;
-  line-height: 20px;
-  letter-spacing: 0em;
+  line-height: 1.25rem;
 }
 
 .primary-theme {
@@ -54,14 +51,14 @@
 
 .success-theme {
   background-color: $color-white;
-  color: $color-success-500 !important;
-  border: 1.5px solid $color-success-500;
+  color: $color-success-600 !important;
+  border: 1.5px solid $color-success-600;
 }
 
 .error-theme {
   background-color: $color-white;
-  color: $color-error-500 !important;
-  border: 1.5px solid $color-error-500;
+  color: $color-error-600 !important;
+  border: 1.5px solid $color-error-600;
 }
 
 .grey_blue-theme {
